<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/llCheckReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/radius_7_stroke_000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription_product_name"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/subscription_review_title"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/subscription_review_date"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </LinearLayout>

</layout>